k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-web-app
  labels:
    app: golang-web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: golang-web-app
  template:
    metadata:
      labels:
        app: golang-web-app  
    spec:
      containers:
      - name: golang-web-app
        image: dsourav155/golang-web-app:v2
        ports:
        - containerPort: 8080
