k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: golang-web-app
  labels:
    app: golang-web-app
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: golang-web-app
  type: ClusterIP
